# bevi_shader_test

./: Cargo.toml
assets/: BaseScene.blend  BaseScene.blend1  BaseScene.glb  Grass.glb  Petal.glb  Plant.glb
assets/shaders/: pixelate_shader.wgsl
src/: camera_spawn.rs  dict.rs  main.rs  player_control.rs  scene_spawn.rs  ui_hover.rs
