[package]
name = "bevi_shader_test"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"]}
bevy-inspector-egui = "0.15.0"
bevy_rapier3d = {version = "0.20.0", features = ["debug-render"]}